--- a/index.html
+++ b/index.html
@@ -19,203 +19,215 @@
 
   <body>
     <header class="page-header">
-      <nav class="page-nav">
-        <a class="logo" href="./index.html"
-          >Web<span class="logo-part-header">Studio</span></a
-        >
-        <ul class="menu">
-          <li class="menu-item">
-            <a class="menu-link" href="./index.html">Studio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">Portfolio</a>
-          </li>
-          <li class="menu-item">
-            <a class="menu-link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
-      <address class="contacts">
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="contacts-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contacts-item">
-            <a class="contacts-link" href="tel:+110001111111"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
+      <div class="container header-container">
+        <nav class="page-nav">
+          <a class="logo" href="./index.html"
+            >Web<span class="logo-part-header">Studio</span></a
+          >
+          <ul class="menu">
+            <li class="menu-item">
+              <a class="menu-link" href="./index.html">Studio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Portfolio</a>
+            </li>
+            <li class="menu-item">
+              <a class="menu-link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="contacts">
+          <ul class="contacts-list">
+            <li class="contacts-item">
+              <a class="contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="contacts-item">
+              <a class="contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <!-- HERO PAGE -->
       <section class="hero-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button class="order-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="main-title">Effective Solutions for Your Business</h1>
+          <button class="order-btn" type="button">Order Service</button>
+        </div>
       </section>
 
       <!-- BENEFITS -->
-      <section class="benefits">
-        <h2 hidden>Benefits</h2>
-        <ul class="benefits-list">
-          <li class="benefits-item">
-            <h3 class="benefits-title">Strategy</h3>
-            <p class="benefits-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-title">Punctuality</h3>
-            <p class="benefits-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-title">Diligence</h3>
-            <p class="benefits-text">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="benefits-item">
-            <h3 class="benefits-title">Technologies</h3>
-            <p class="benefits-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+      <section class="benefits section">
+        <div class="container">
+          <h2 class="visually-hidden">Benefits</h2>
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="benefits-title">Strategy</h3>
+              <p class="benefits-text">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Punctuality</h3>
+              <p class="benefits-text">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Diligence</h3>
+              <p class="benefits-text">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">Technologies</h3>
+              <p class="benefits-text">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- OUR TEAM -->
-      <section class="team-section">
-        <h2 class="team-title">Our Team</h2>
-        <ul class="team-list">
-          <li class="team-item">
-            <img
-              class="team-item-photo"
-              src="./images/mark-guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="team-item-name">Mark Guerrero</h3>
-            <p class="team-item-prof">Product Designer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-item-photo"
-              src="./images/tom-ford.jpg"
-              alt="Tom Ford"
-              width="264"
-            />
-            <h3 class="team-item-name">Tom Ford</h3>
-            <p class="team-item-prof">Frontend Developer</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-item-photo"
-              src="./images/camila-garcia.jpg"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="team-item-name">Camila Garcia</h3>
-            <p class="team-item-prof">Marketing</p>
-          </li>
-          <li class="team-item">
-            <img
-              class="team-item-photo"
-              src="./images/daniel-wilson.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="team-item-name">Daniel Wilson</h3>
-            <p class="team-item-prof">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team-section section">
+        <div class="container">
+          <h2 class="team-title">Our Team</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img
+                class="team-item-photo"
+                src="./images/mark-guerrero.jpg"
+                alt="Mark Guerrero"
+                width="264"
+              />
+              <h3 class="team-item-name">Mark Guerrero</h3>
+              <p class="team-item-prof">Product Designer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-item-photo"
+                src="./images/tom-ford.jpg"
+                alt="Tom Ford"
+                width="264"
+              />
+              <h3 class="team-item-name">Tom Ford</h3>
+              <p class="team-item-prof">Frontend Developer</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-item-photo"
+                src="./images/camila-garcia.jpg"
+                alt="Camila Garcia"
+                width="264"
+              />
+              <h3 class="team-item-name">Camila Garcia</h3>
+              <p class="team-item-prof">Marketing</p>
+            </li>
+            <li class="team-item">
+              <img
+                class="team-item-photo"
+                src="./images/daniel-wilson.jpg"
+                alt="Daniel Wilson"
+                width="264"
+              />
+              <h3 class="team-item-name">Daniel Wilson</h3>
+              <p class="team-item-prof">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- OUR PORTFOLIO -->
-      <section class="portfolio-section">
-        <h2 class="portfolio-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              class="project-img"
-              src="./images/banking-app.jpg"
-              alt="Banking app"
-              width="360"
-            />
-            <h3 class="project-name">Banking App</h3>
-            <p class="project-descr">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="project-img"
-              src="./images/cashless-payment.jpg"
-              alt="Cashless Payment"
-              width="360"
-            />
-            <h3 class="project-name">Cashless Payment</h3>
-            <p class="project-descr">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="project-img"
-              src="./images/meditation-app.jpg"
-              alt="Meditation App"
-              width="360"
-            />
-            <h3 class="project-name">Meditation App</h3>
-            <p class="project-descr">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="project-img"
-              src="./images/taxi-service.jpg"
-              alt="Taxi Service"
-              width="360"
-            />
-            <h3 class="project-name">Taxi Service</h3>
-            <p class="project-descr">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="project-img"
-              src="./images/screen-illustrations.jpg"
-              alt="Screen Illustrations"
-              width="360"
-            />
-            <h3 class="project-name">Screen Illustrations</h3>
-            <p class="project-descr">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              class="project-img"
-              src="./images/online-courses.jpg"
-              alt="Online Courses"
-              width="360"
-            />
-            <h3 class="project-name">Online Courses</h3>
-            <p class="project-descr">Marketing</p>
-          </li>
-        </ul>
+      <section class="portfolio-section section">
+        <div class="container">
+          <h2 class="portfolio-title">Our Portfolio</h2>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
+              <img
+                class="project-img"
+                src="./images/banking-app.jpg"
+                alt="Banking app"
+                width="360"
+              />
+              <h3 class="project-name">Banking App</h3>
+              <p class="project-descr">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="project-img"
+                src="./images/cashless-payment.jpg"
+                alt="Cashless Payment"
+                width="360"
+              />
+              <h3 class="project-name">Cashless Payment</h3>
+              <p class="project-descr">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="project-img"
+                src="./images/meditation-app.jpg"
+                alt="Meditation App"
+                width="360"
+              />
+              <h3 class="project-name">Meditation App</h3>
+              <p class="project-descr">App</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="project-img"
+                src="./images/taxi-service.jpg"
+                alt="Taxi Service"
+                width="360"
+              />
+              <h3 class="project-name">Taxi Service</h3>
+              <p class="project-descr">Marketing</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="project-img"
+                src="./images/screen-illustrations.jpg"
+                alt="Screen Illustrations"
+                width="360"
+              />
+              <h3 class="project-name">Screen Illustrations</h3>
+              <p class="project-descr">Design</p>
+            </li>
+            <li class="portfolio-item">
+              <img
+                class="project-img"
+                src="./images/online-courses.jpg"
+                alt="Online Courses"
+                width="360"
+              />
+              <h3 class="project-name">Online Courses</h3>
+              <p class="project-descr">Marketing</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="page-footer">
-      <a class="logo" href="./index.html"
-        >Web<span class="logo-part-footer">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <a class="logo" href="./index.html"
+          >Web<span class="logo-part-footer">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
