corrected section cards

--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
                 alt="Mark Guerrero"
                 width="264"
               />
-              <h3 class="team-item-name">Mark Guerrero</h3>
-              <p class="team-item-prof">Product Designer</p>
+              <div class="team-card-text">
+                <h3 class="team-item-name">Mark Guerrero</h3>
+                <p class="team-item-prof">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -121,8 +123,10 @@
                 alt="Tom Ford"
                 width="264"
               />
-              <h3 class="team-item-name">Tom Ford</h3>
-              <p class="team-item-prof">Frontend Developer</p>
+              <div class="team-card-text">
+                <h3 class="team-item-name">Tom Ford</h3>
+                <p class="team-item-prof">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -131,8 +135,10 @@
                 alt="Camila Garcia"
                 width="264"
               />
-              <h3 class="team-item-name">Camila Garcia</h3>
-              <p class="team-item-prof">Marketing</p>
+              <div class="team-card-text">
+                <h3 class="team-item-name">Camila Garcia</h3>
+                <p class="team-item-prof">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -141,8 +147,10 @@
                 alt="Daniel Wilson"
                 width="264"
               />
-              <h3 class="team-item-name">Daniel Wilson</h3>
-              <p class="team-item-prof">UI Designer</p>
+              <div class="team-card-text">
+                <h3 class="team-item-name">Daniel Wilson</h3>
+                <p class="team-item-prof">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -160,8 +168,10 @@
                 alt="Banking app"
                 width="360"
               />
-              <h3 class="project-name">Banking App</h3>
-              <p class="project-descr">App</p>
+              <div class="project-card-text">
+                <h3 class="project-name">Banking App</h3>
+                <p class="project-descr">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -170,8 +180,10 @@
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="project-name">Cashless Payment</h3>
-              <p class="project-descr">Marketing</p>
+              <div class="project-card-text">
+                <h3 class="project-name">Cashless Payment</h3>
+                <p class="project-descr">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -180,8 +192,10 @@
                 alt="Meditation App"
                 width="360"
               />
-              <h3 class="project-name">Meditation App</h3>
-              <p class="project-descr">App</p>
+              <div class="project-card-text">
+                <h3 class="project-name">Meditation App</h3>
+                <p class="project-descr">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -190,8 +204,10 @@
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="project-name">Taxi Service</h3>
-              <p class="project-descr">Marketing</p>
+              <div class="project-card-text">
+                <h3 class="project-name">Taxi Service</h3>
+                <p class="project-descr">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -200,8 +216,10 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="project-name">Screen Illustrations</h3>
-              <p class="project-descr">Design</p>
+              <div class="project-card-text">
+                <h3 class="project-name">Screen Illustrations</h3>
+                <p class="project-descr">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
               <img
@@ -210,8 +228,10 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="project-name">Online Courses</h3>
-              <p class="project-descr">Marketing</p>
+              <div class="project-card-text">
+                <h3 class="project-name">Online Courses</h3>
+                <p class="project-descr">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
