--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a class="logo" href="./index.html"
+        <a class="logo logo-footer" href="./index.html"
           >Web<span class="logo-part-footer">Studio</span></a
         >
         <p class="footer-text">
