--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="page-header">
       <div class="container header-container">
         <nav class="page-nav">
-          <a class="logo" href="./index.html"
+          <a class="logo-header" href="./index.html"
             >Web<span class="logo-part-header">Studio</span></a
           >
           <ul class="menu">
@@ -240,7 +240,7 @@
 
     <footer class="page-footer">
       <div class="container">
-        <a class="logo logo-footer" href="./index.html"
+        <a class="logo-footer" href="./index.html"
           >Web<span class="logo-part-footer">Studio</span></a
         >
         <p class="footer-text">
